mysfits-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysfits-service
  labels:
    app: mysfits
spec:
  selector:
    app: mysfits
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
